package com.github.yck.pattern.structural.proxyAB.adapter.classadapter;

public interface Voltage5V {
    public int output5v();
}
